Tornando o código compilável no JDK 10